Bug 248178 - [web-animations] baseline-shift animation is incorrect
Summary: [web-animations] baseline-shift animation is incorrect
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Animations (show other bugs)
Version: Safari Technology Preview
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Antoine Quint
URL:
Keywords: InRadar, WebExposed, WPTImpact
Depends on:
Blocks:
 
Reported: 2022-11-21 09:14 PST by Antoine Quint
Modified: 2022-11-22 06:29 PST (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antoine Quint 2022-11-21 09:14:53 PST
We currently animate baseline-shift by using RenderStyle::baselineShiftValue() but there is also an accessor on SVGRenderStyle that contains the various keyword values baseline-shift can use. We need to set those correctly and also return the correct computed style.
Comment 1 Antoine Quint 2022-11-21 09:22:43 PST
Pull request: https://github.com/WebKit/WebKit/pull/6703
Comment 2 EWS 2022-11-22 06:28:33 PST
Committed 256934@main (50e415a29df2): <https://commits.webkit.org/256934@main>

Reviewed commits have been landed. Closing PR #6703 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-11-22 06:29:17 PST
<rdar://problem/102605442>